# BrightnessControl

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
prototipo-python-antigo/: README-python.md  bandeja.py  brilho.py  instalar.bat  interface.py  requirements.txt
src/: App.css  App.tsx  main.tsx  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brightness.rs  main.rs
src-tauri/windows/: hooks.nsh
src/components/: BrightnessDial.css  BrightnessDial.tsx  BrightnessOsd.css  BrightnessOsd.tsx  MonitorSelect.css  MonitorSelect.tsx  PresetChips.css  PresetChips.tsx  Settings.css  Settings.tsx  TitleBar.css  TitleBar.tsx
src/styles/: index.css
