[package]
name = "controle-de-brilho"
version = "0.1.0"
description = "Controle de brilho de monitor via DDC/CI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rdev = { version = "0.5", features = ["unstable_grab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Controle real de brilho via DDC/CI (multiplataforma: Windows/Linux/macOS)
ddc-hi = "0.4"

[[bin]]
name = "controle-de-brilho"
path = "src/main.rs"
